--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "events": "^1.1.1",
     "express": "^4.15.3",
+    "express-graphql": "^0.4.13",
+    "flux": "^3.1.2",
+    "graphql": "^0.4.18",
+    "jquery": "^3.2.1",
+    "kerberos": "0.0.23",
+    "mongodb": "^2.2.29",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "webpack": "^1.12.9"
