--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node --presets react,es2015 server.js",
+    "start": "babel-node --presets react,es2015,stage-0 server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +15,8 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-relay-plugin": "^0.11.0",
     "events": "^1.1.1",
     "express": "^4.15.3",
     "express-graphql": "^0.4.13",
@@ -25,6 +27,7 @@
     "mongodb": "^2.2.29",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
+    "react-relay": "^1.1.0",
     "webpack": "^1.12.9"
   },
   "devDependencies": {
